fixed layout shift for scroll

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,6 +10,7 @@ body {
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
     sans-serif;
   font-size: var(--step-0);
+  overflow-y: scroll;
 }
 
 header {
@@ -60,13 +61,13 @@ body::-webkit-scrollbar {
 }
 html {
   scrollbar-width: thin;
-  scrollbar-color: var(--black) var(--white);
+  scrollbar-color: var(--white) var(--black);
 }
 body::-webkit-scrollbar-track {
-  background: var(--white);
+  background: var(--black);
 }
 body::-webkit-scrollbar-thumb {
-  background-color: var(--black);
+  background-color: var(--white);
   border-radius: 6px;
-  border: 3px solid var(--white);
+  border: 3px solid var(--black);
 }
